--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: synergysquad-live-quiz
     runtime: node
-    buildCommand: "cd frontend && npm install && npm run build && cd ../backend && npm install"
+    buildCommand: "cd frontend && npm install --include=dev && npm run build && cd ../backend && npm install"
     startCommand: "cd backend && node server.js"
     plan: free
     envVars:
